Сделаны стили для SEO и хитов главной страницы

--- a/index.html
+++ b/index.html
@@ -235,50 +235,65 @@
           собственного производства на развес
         </h3>
 
-        <ul>
-          <li>
-            <img
-              alt="Мороженое собственного производства"
-              src="IMG/ice-cream.svg"
-            />
+        <div class="SEO-container">
+          <ul class="SEO-list">
+            <li>
+              <img
+                class="SEO-icon" id="first-row"
+                alt="Мороженое собственного производства"
+                src="IMG/ice-cream.svg"
+              />
 
-            <p>
-              Все наше мороженое изготавливается на собственном производстве, с
-              использованием современного оборудования и проверенных временем
-              технологий.
-            </p>
-          </li>
+              <p>
+                Все наше мороженое изготавливается на собственном производстве,
+                с использованием современного оборудования и проверенных
+                временем технологий.
+              </p>
+            </li>
 
-          <li>
-            <img alt="Иконка 2" src="IMG/eco.svg" />
+            <li>
+              <img
+                class="SEO-icon" id="first-row"
+                alt="Ингредиенты от проверенных фермерских хозяйств и компаний"
+                src="IMG/cow.svg"
+              />
 
-            <p>
-              Для приготовления мороженого используются настоящие сливки и
-              молоко высочайшего качества. Все дополнительные ингредиенты и
-              добавки произведены из натурального, экологически чистого сырья.
-            </p>
-          </li>
+              <p>
+                Закупка ингредиентов производится только у проверенных
+                фермерских хозяйств и компаний, с которыми нас связывает
+                долговременное сотрудничество.
+              </p>
+            </li>
+         
+            <li>
+              <img
+                class="SEO-icon" id="second-row"
+                alt="Экологически чистое сырье"
+                src="IMG/eco.svg"
+              />
 
-          <li>
-            <img alt="Иконка 3" src="IMG/cow.svg" />
+              <p>
+                Для приготовления мороженого используются настоящие сливки и
+                молоко высочайшего качества. Все дополнительные ингредиенты и
+                добавки произведены из натурального, экологически чистого сырья.
+              </p>
+            </li>
 
-            <p>
-              Закупка ингредиентов производится только у проверенных фермерских
-              хозяйств и компаний, с которыми нас связывает долговременное
-              сотрудничество.
-            </p>
-          </li>
+            <li>
+              <img
+                class="SEO-icon" id="second-row"
+                alt="Доставка продукта в специальном термопаке"
+                src="IMG/thermometer.svg"
+              />
 
-          <li>
-            <img alt="Иконка 4" src="IMG/thermometer.svg" />
-
-            <p>
-              Доставка нашего мороженого до заказчиков осуществляется в
-              специальном термопаке, который не дает мороженому растаять в пути
-              и позволяет сохранить превосходный вкус.
-            </p>
-          </li>
-        </ul>
+              <p>
+                Доставка нашего мороженого до заказчиков осуществляется в
+                специальном термопаке, который не дает мороженому растаять в
+                пути и позволяет сохранить превосходный вкус.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <article class="news">
