Adds the "News" element

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
           <ul class="SEO-list">
             <li>
               <img
-                class="SEO-icon" id="first-row"
+                class="SEO-icon"
+                id="first-row"
                 alt="Мороженое собственного производства"
                 src="IMG/ice-cream.svg"
               />
@@ -253,7 +254,8 @@
 
             <li>
               <img
-                class="SEO-icon" id="first-row"
+                class="SEO-icon"
+                id="first-row"
                 alt="Ингредиенты от проверенных фермерских хозяйств и компаний"
                 src="IMG/cow.svg"
               />
@@ -264,10 +266,11 @@
                 долговременное сотрудничество.
               </p>
             </li>
-         
+
             <li>
               <img
-                class="SEO-icon" id="second-row"
+                class="SEO-icon"
+                id="second-row"
                 alt="Экологически чистое сырье"
                 src="IMG/eco.svg"
               />
@@ -281,7 +284,8 @@
 
             <li>
               <img
-                class="SEO-icon" id="second-row"
+                class="SEO-icon"
+                id="second-row"
                 alt="Доставка продукта в специальном термопаке"
                 src="IMG/thermometer.svg"
               />
@@ -296,26 +300,28 @@
         </div>
       </section>
 
-      <article class="news">
-        <h4>Новое в нашем блоге</h4>
-        <a href="">10 способов сервировки фруктовых щербетов к столу</a>
-      </article>
+      <div class="news-mailing-container">
+        <article class="news">
+          <h4>Новое в нашем блоге</h4>
+          <a href="">10 способов сервировки фруктовых щербетов к столу</a>
+        </article>
 
-      <section class="mailing">
-        <form>
-          <p>
-            Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
-            самого вкусного, что у нас происходит. Обещаем не спамить и не слать
-            всякой ненужной ерунды. Честно =)
-          </p>
+        <section class="mailing">
+          <form>
+            <p>
+              Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
+              самого вкусного, что у нас происходит. Обещаем не спамить и не
+              слать всякой ненужной ерунды. Честно =)
+            </p>
 
-          <label>
-            <input type="email" placeholder="email@example.com" />
-          </label>
+            <label>
+              <input type="email" placeholder="email@example.com" />
+            </label>
 
-          <button type="submit">Отправить</button>
-        </form>
-      </section>
+            <button type="submit">Отправить</button>
+          </form>
+        </section>
+      </div>
 
       <article class="map">
         <div style="position: relative; overflow: hidden">
@@ -336,6 +342,7 @@
             style="position: relative"
           ></iframe>
         </div>
+        
         <section class="address">
           <h5>Адрес главного офиса и офлайн-магазина:</h5>
           <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
