Added the "News" and "Newsletter" elements

--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
         </article>
 
         <section class="mailing">
-          <form>
-            <p>
-              Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
-              самого вкусного, что у нас происходит. Обещаем не спамить и не
-              слать всякой ненужной ерунды. Честно =)
-            </p>
+          <p>
+            Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
+            самого вкусного, что у нас происходит. Обещаем не спамить и не слать
+            всякой ненужной ерунды. Честно =)
+          </p>
 
+          <form class="email-form-container">
             <label>
               <input type="email" placeholder="email@example.com" />
             </label>
@@ -342,7 +342,7 @@
             style="position: relative"
           ></iframe>
         </div>
-        
+
         <section class="address">
           <h5>Адрес главного офиса и офлайн-магазина:</h5>
           <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
