--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       </div>
 
       <article class="map">
-        <div style="position: relative; overflow: hidden">
+        <div class="map-container" style="position: relative; overflow: hidden">
           <a
             href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
             style="color: #eee; font-size: 12px; position: absolute; top: 0px"
@@ -335,8 +335,8 @@
             >Большая Конюшенная улица, 19/8 — Яндекс Карты</a
           ><iframe
             src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&z=16.65"
-            width="560"
-            height="400"
+            width="1200"
+            height="430"
             frameborder="1"
             allowfullscreen="true"
             style="position: relative"
@@ -345,10 +345,12 @@
 
         <section class="address">
           <h5>Адрес главного офиса и офлайн-магазина:</h5>
-          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-          <p>Для заказов по телефону:</p>
-          <p>8 812 450-25-25</p>
-          <p>(с 10 до 20 ежедневно)</p>
+          <div class="contacts-container">
+            <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+            <p>Для заказов по телефону:</p>
+            <p>8 812 450-25-25</p>
+            <p>(с 10 до 20 ежедневно)</p>
+          </div>
           <button type="button">Форма обратной связи</button>
         </section>
       </article>
