--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
         </section>
       </div>
 
-      <article class="map">
-        <div class="map-container" style="position: relative; overflow: hidden">
+      <article class="map-container">
+        <div class="map" style="position: relative; overflow: hidden">
           <a
             href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
             style="color: #eee; font-size: 12px; position: absolute; top: 0px"
