--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
       <span class="social-media-and-menu-container">
         <ul class="social-media">
           <li>
-            <a class="social-media-link twitter__link" href="">
+            <a class="social-media-link twitter__link">
+              <!-- href="#" -->
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
@@ -384,6 +385,7 @@
                 viewBox="0 0 32 32"
               >
                 <g fill="#FFF">
+                  <!-- <g fill="#E9E9E9"> -->
                   <path
                     d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"
                   />
