Fixed buttons in header
Fixed buttons "login-link" & "basket__button"

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     fill="white"
                   />
                 </svg>
-                <div>Вход</div>
+                Вход
               </a>
             </li>
             <li>
@@ -84,7 +84,7 @@
                     <circle cx="15.984" cy="18" r="2" />
                   </g>
                 </svg>
-                <div>Пусто</div>
+                Пусто
               </button>
             </li>
           </ul>
