Update header elements in index.html +fixed images's location

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             alt="Логотип магазина"
           />
         </a>
-        <div class="container">
+        <div class="menu-container">
           <ul class="site-navigation">
             <li>
               <button type="button">Каталог</button>
