Made radio-button in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,24 @@
             с малиновым джемом
           </p>
         </div>
-        <!-- Радиокнопка где-то здесь -->
+
+        <form class="choise-offer-radio-button">
+          <label>
+            <input type="radio" name="offers" checked/>
+            <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-1" />
+          </label>
+
+          <label>
+            <input type="radio" name="offers" />
+            <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-2" />
+          </label>
+
+          <label>
+            <input type="radio" name="offers" />
+            <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-3" />
+          </label>
+        </form>
+
         <button type="button">Давайте оба!</button>
       </article>
 
