Fixed header's elements in index.html

--- a/index.html
+++ b/index.html
@@ -102,17 +102,15 @@
       <h2 class="visually-hidden">Предложения</h2>
 
       <article class="special-offer">
-        <div class="offer-text">
-          <p>
-            Крем-брюле и пломбир
-            <br />
-            с малиновым джемом
-          </p>
-        </div>
+        <p class="offer-text">
+          Крем-брюле и пломбир
+          <br />
+          с малиновым джемом
+        </p>
 
         <form class="choise-offer-radio-button">
           <label>
-            <input type="radio" name="offers" checked/>
+            <input type="radio" name="offers" checked />
             <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-1" />
           </label>
 
