Fixed element "hits" in index.html

--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
 
       <section class="hits-container">
         <ul class="hits">
-          <li>
-            <div class="hit-item">
+          <li class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img class="hit-photo" src="IMG/Taste_1.png" alt="Мороженое 1" />
+              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
               <p class="price">
                 310
                 <span class="rub">₽</span>
@@ -193,13 +192,11 @@
               <a class="ice-cream-name" href=""
                 >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
               >
-            </div>
           </li>
 
-          <li>
-            <div class="hit-item">
+          <li class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img class="hit-photo" src="IMG/Taste_2.png" alt="Мороженое 2" />
+              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
               <p class="price">
                 380
                 <span class="rub">₽</span>
@@ -209,13 +206,11 @@
               <a class="ice-cream-name" href=""
                 >Сливочно-кофейное с кусочками шоколада</a
               >
-            </div>
           </li>
 
-          <li>
-            <div class="hit-item">
+          <li class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img class="hit-photo" src="IMG/Taste_3.png" alt="Мороженое 3" />
+              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
               <p class="price">
                 355
                 <span class="rub">₽</span>
@@ -224,13 +219,11 @@
               <a class="ice-cream-name" href=""
                 >Сливочно-клубничное с присыпкой из белого шоколада</a
               >
-            </div>
           </li>
 
-          <li>
-            <div class="hit-item">
+          <li class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img class="hit-photo" src="IMG/Taste_4.png" alt="Мороженое 4" />
+              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
               <p class="price">
                 415
                 <span class="rub">₽</span>
@@ -239,7 +232,6 @@
               <a class="ice-cream-name" href=""
                 >Сливочное крем-брюле с карамельной подливкой</a
               >
-            </div>
           </li>
         </ul>
       </section>
