Added modal login window

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </button>
             </li>
             <li>
-              <a class="login-link" href="">
+              <a class="login-link" href="#">
                 <svg
                   width="21"
                   height="19"
@@ -181,57 +181,57 @@
       <section class="hits-container">
         <ul class="hits">
           <li class="hit-item">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
-              <p class="price">
-                310
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
+            <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+            <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+            <p class="price">
+              310
+              <span class="rub">₽</span>
+              <span class="unit-monetary">/кг</span>
+            </p>
 
-              <a class="ice-cream-name" href=""
-                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
-              >
+            <a class="ice-cream-name" href=""
+              >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+            >
           </li>
 
           <li class="hit-item">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
-              <p class="price">
-                380
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
+            <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+            <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+            <p class="price">
+              380
+              <span class="rub">₽</span>
+              <span class="unit-monetary">/кг</span>
+            </p>
 
-              <a class="ice-cream-name" href=""
-                >Сливочно-кофейное с кусочками шоколада</a
-              >
+            <a class="ice-cream-name" href=""
+              >Сливочно-кофейное с кусочками шоколада</a
+            >
           </li>
 
           <li class="hit-item">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
-              <p class="price">
-                355
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочно-клубничное с присыпкой из белого шоколада</a
-              >
+            <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+            <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+            <p class="price">
+              355
+              <span class="rub">₽</span>
+              <span class="unit-monetary">/кг</span>
+            </p>
+            <a class="ice-cream-name" href=""
+              >Сливочно-клубничное с присыпкой из белого шоколада</a
+            >
           </li>
 
           <li class="hit-item">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
-              <p class="price">
-                415
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочное крем-брюле с карамельной подливкой</a
-              >
+            <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+            <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+            <p class="price">
+              415
+              <span class="rub">₽</span>
+              <span class="unit-monetary">/кг</span>
+            </p>
+            <a class="ice-cream-name" href=""
+              >Сливочное крем-брюле с карамельной подливкой</a
+            >
           </li>
         </ul>
       </section>
@@ -242,63 +242,63 @@
           собственного производства на развес
         </h3>
 
-          <ul class="SEO-list">
-            <li>
-              <img
-                class="SEO-icon"
-                alt="Мороженое собственного производства"
-                src="IMG/ice-cream.svg"
-              />
+        <ul class="SEO-list">
+          <li>
+            <img
+              class="SEO-icon"
+              alt="Мороженое собственного производства"
+              src="IMG/ice-cream.svg"
+            />
 
-              <p>
-                Все наше мороженое изготавливается на собственном производстве,
-                с использованием современного оборудования и проверенных
-                временем технологий.
-              </p>
-            </li>
+            <p>
+              Все наше мороженое изготавливается на собственном производстве, с
+              использованием современного оборудования и проверенных временем
+              технологий.
+            </p>
+          </li>
 
-            <li>
-              <img
-                class="SEO-icon"
-                alt="Ингредиенты от проверенных фермерских хозяйств и компаний"
-                src="IMG/cow.svg"
-              />
+          <li>
+            <img
+              class="SEO-icon"
+              alt="Ингредиенты от проверенных фермерских хозяйств и компаний"
+              src="IMG/cow.svg"
+            />
 
-              <p>
-                Закупка ингредиентов производится только у проверенных
-                фермерских хозяйств и компаний, с которыми нас связывает
-                долговременное сотрудничество.
-              </p>
-            </li>
+            <p>
+              Закупка ингредиентов производится только у проверенных фермерских
+              хозяйств и компаний, с которыми нас связывает долговременное
+              сотрудничество.
+            </p>
+          </li>
 
-            <li>
-              <img
-                class="SEO-icon"
-                alt="Экологически чистое сырье"
-                src="IMG/eco.svg"
-              />
+          <li>
+            <img
+              class="SEO-icon"
+              alt="Экологически чистое сырье"
+              src="IMG/eco.svg"
+            />
 
-              <p>
-                Для приготовления мороженого используются настоящие сливки и
-                молоко высочайшего качества. Все дополнительные ингредиенты и
-                добавки произведены из натурального, экологически чистого сырья.
-              </p>
-            </li>
+            <p>
+              Для приготовления мороженого используются настоящие сливки и
+              молоко высочайшего качества. Все дополнительные ингредиенты и
+              добавки произведены из натурального, экологически чистого сырья.
+            </p>
+          </li>
 
-            <li>
-              <img
-                class="SEO-icon"
-                alt="Доставка продукта в специальном термопаке"
-                src="IMG/thermometer.svg"
-              />
+          <li>
+            <img
+              class="SEO-icon"
+              alt="Доставка продукта в специальном термопаке"
+              src="IMG/thermometer.svg"
+            />
 
-              <p>
-                Доставка нашего мороженого до заказчиков осуществляется в
-                специальном термопаке, который не дает мороженому растаять в
-                пути и позволяет сохранить превосходный вкус.
-              </p>
-            </li>
-          </ul>
+            <p>
+              Доставка нашего мороженого до заказчиков осуществляется в
+              специальном термопаке, который не дает мороженому растаять в пути
+              и позволяет сохранить превосходный вкус.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <div class="news-mailing-container">
@@ -489,5 +489,7 @@
         </div>
       </form>
     </section>
+
+    <script src="JS/index.js"></script>
   </body>
 </html>
