Updated modal login window

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           height="38"
           alt="HTML Academy"
         />
-        <p>Сделано в <a href="">HTML Academy</a> © 2019</p>
+        <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
       </div>
     </footer>
 
@@ -476,15 +476,15 @@
         /></label>
 
         <label class="password"
-          ><input type="password" placeholder="********"
+          ><input type="password" placeholder="••••••••"
         /></label>
 
         <div class="sign-in-container">
           <button class="button-sign-in" type="submit">Войти</button>
 
-          <ul>
-            <li><a class="restore" href="">Забыли пароль?</a></li>
-            <li><a class="registration" href="">Новая регистрация</a></li>
+          <ul class="registration-container">
+            <li><a class="restore" href="#">Забыли пароль?</a></li>
+            <li><a class="registration" href="#">Новая регистрация</a></li>
           </ul>
         </div>
       </form>
