Made login modal window

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </button>
             </li>
             <li>
-              <a class="login-link" href="#">
+              <button class="login-link">
                 <svg
                   width="21"
                   height="19"
@@ -66,7 +66,7 @@
                   />
                 </svg>
                 Вход
-              </a>
+              </button>
             </li>
             <li>
               <button class="basket__button" type="button">
@@ -347,12 +347,12 @@
 
         <section class="address">
           <h5>Адрес главного офиса и офлайн-магазина:</h5>
-          <div class="contacts-container">
-            <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-            <p>Для заказов по телефону:</p>
-            <p>8 812 450-25-25</p>
-            <p>(с 10 до 20 ежедневно)</p>
-          </div>
+          <ul class="contacts-container">
+            <li>ул. Большая Конюшенная 19/8, Санкт-Петербург</li>
+            <li>Для заказов по телефону:</li>
+            <li>8 812 450-25-25</li>
+            <li>(с 10 до 20 ежедневно)</li>
+          </ul>
           <button type="button">Форма обратной связи</button>
         </section>
       </article>
