Updated modal windows

--- a/index.html
+++ b/index.html
@@ -492,11 +492,11 @@
     </section>
 
     <section class="modal modal-catalog-menu">
-      <form class="catalog-menu">
+      <form class="catalog-menu-form">
         <h6 class="visually-hidden">Catalog menu</h6>
         <ul class="new-products">
           <li>Новинки</li>
-          <li><!-- разделитель - картинка --></li>
+          <li><!-- разделитель--></li>
           <li>Сливочное</li>
           <li>Щербеты</li>
           <li>Фруктовый лед</li>
@@ -506,14 +506,16 @@
     </section>
 
     <section class="modal modal-search">
-      <form class="search">
+      <form class="search-form">
         <h6 class="visually-hidden">Search</h6>
-        <label><input class="input-search" type="search" placeholder="Крем-брюле" /></label>
+        <label
+          ><input class="input-search" type="search" placeholder="Крем-брюле"
+        /></label>
       </form>
     </section>
 
     <section class="modal modal-feedback">
-      <form class="feedback">
+      <form class="feedback-form">
         <h6 class="visually-hidden">Feedback form</h6>
         <p>Мы обязательно вам ответим!</p>
         <label><input type="text" placeholder="Имя Фамилия" /></label>
