Updated offer switch(radio button)

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="CSS/style.css" rel="stylesheet" />
     <title>Каталог</title>
   </head>
-  <body>
+  <body class="background-offer-1">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
