--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="background-offer-1 picture-offer-1">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img
             src="IMG/logo.svg"
             width="154"
@@ -115,12 +115,12 @@
           </label>
 
           <label>
-            <input type="radio" name="offers" id="radio-offer-2"/>
+            <input type="radio" name="offers" id="radio-offer-2" />
             <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-2" />
           </label>
 
           <label>
-            <input type="radio" name="offers" id="radio-offer-3"/>
+            <input type="radio" name="offers" id="radio-offer-3" />
             <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-3" />
           </label>
         </form>
@@ -497,7 +497,7 @@
         <p>Новинки</p>
         <ul class="new-products">
           <li><!-- разделитель--></li>
-          <li>Сливочное</li>
+          <li><a href="catalog.html">Сливочное</a></li>
           <li>Щербеты</li>
           <li>Фруктовый лед</li>
           <li>Мелорин</li>
